--- a/index.html
+++ b/index.html
@@ -57,4 +57,12 @@
       <p>Copyright ©BeaioeoIII 2023</p>
     </footer>
   </body>
+  <div id="modal" class="hidden">
+    <div class="header">
+      <h1 class="result">You Won!</h1>
+      <button class="close-modal">&times;</button>
+    </div>
+    <button class="play-again">Play Again</button>
+  </div>
+  <div id="overlay" class="hidden"></div>
 </html>
