--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <p>Copyright ©BeaioeoIII 2023</p>
     </footer>
   </body>
+  <div id="overlay" class="hidden"></div>
   <div id="modal" class="hidden">
     <div class="header">
       <h1 class="result">You Won!</h1>
@@ -62,5 +63,8 @@
     </div>
     <button class="play-again">Play Again</button>
   </div>
-  <div id="overlay" class="hidden"></div>
+  <div id="game-log" class="result hidden">
+    <div class="heading"><h1>GAMELOG</h1></div>
+    <div class="result"></div>
+  </div>
 </html>
