--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     </header>
     <main>
       <div id="scoreboard">
-        <h1 id="winner" style="margin-bottom: 0; font-size: 50px">
-          Choose your weapon
-        </h1>
+        <h1 id="winner">Choose your weapon</h1>
         <h4
           id="round-message"
           style="margin-top: 0; font-size: 20px; font-weight: 800">
