--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>WELCOME TO THE ROCK PAPER & SCISSOR</h1>
+      <h1>WELCOME TO ROCK PAPER & SCISSOR</h1>
     </header>
     <main>
       <div id="scoreboard">
@@ -50,7 +50,7 @@
       </div>
     </main>
     <footer>
-      <p>Copyright ©BeaioeoIII 2023</p>
+      <p>Copyright ©thIIIrdy 2023</p>
     </footer>
   </body>
   <div id="overlay" class="hidden"></div>
@@ -59,7 +59,7 @@
       <h1 class="result">You Won!</h1>
       <button class="close-modal">&times;</button>
     </div>
-    <button class="play-again">Play Again</button>
+    <button class="play-again buttons">Play Again</button>
   </div>
   <div id="game-log" class="result hidden">
     <div class="heading"><h1>GAMELOG</h1></div>
